Archive2/a3/12afe55645cb47/output
main.cpp:16:13: error: default initialization of an object of const type 'const Y' requires a user-provided default constructor
    Y const y;  // ERROR, default constructor only user-declared
            ^
1 error generated.
